@@ -41,7 +41,7 @@ accumulated precipitation fields. The final two arguments are output fields
 --- annual ablation (\texttt{ablt}) and annual mass-balance
 (\texttt{acab}). All arrays are of type \texttt{real(sp)}. Temperatures are
 degrees Celcius, and precipitation, ablation and mass-balance are measured in
-mm of water equivalent.
+m of water equivalent.
 %
 %
 %
